# SortingHat

./: .gitignore  Package.swift  README.md  project.yml
.github/workflows/: ci.yml  release.yml
Configuration/: AppStoreExportOptions.plist  PrivacyInfo.xcprivacy  README.md  Release.xcconfig  SendToSortingHatAction-Info.plist  SendToSortingHatAction.entitlements  SortingHatApp-AppStore.entitlements  SortingHatApp-Info.plist  SortingHatApp.entitlements
SortingHat.xcodeproj/: project.pbxproj
Sources/SendToSortingHatAction/: ActionRequestHandler.swift
Sources/SortingHat/: CLI.swift
Sources/SortingHatCore/: BatchAnalysis.swift  Config.swift  DecisionJSONDecoder.swift  DocumentTextExtractor.swift  FMAnalyzer.swift  (+12 more)
docs/: distribution.md  finder-quick-action.md  hacker-news-draft.md  ios-client-architecture.md  privacy.md  support.md  wwdc26-comparison.md
evaluation/: QUALITY_POLICY.md  README.md  ROUTING_RESULTS.md  TOOL_RESULTS.md  TOOL_THREAT_MODEL.md  matrix.json  prompts.json  pyproject.toml  quality-policy.json  system-matrix.json  tool-matrix.json
evaluation/src/sortinghat_evaluation/: __init__.py  bounded_tools.py  cli.py  pipeline.py
evaluation/tests/: test_pipeline.py
launch-pack/: ASSET_INVENTORY.md  CHANNEL_MATRIX.md  CLAIMS_LEDGER.md  HANDOFF.md  LAUNCH_BRIEF.md  RELEASE_CHECKLIST.md
script/: archive_app_store.sh  build_and_run.sh  create_release_draft.sh  generate_app_icon.swift  generate_xcode_project.sh  install_quick_action.sh  preflight_app_store.sh  release_candidate.sh  release_identity.sh  release_local.sh  verify_release_archive.sh
(+32 files in other folders)
